--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ firebase.initializeApp({
   apiKey:            "AIzaSyDcxgSSq69-GlEsHyQ9_ORZNXLcPERdVmw",
   authDomain:        "rifarird1.firebaseapp.com",
   projectId:         "rifarird1",
-  storageBucket:     "rifarird1.firebasestorage.app",
+  storageBucket:     "rifarird1.appspot.com",
   messagingSenderId: "518504310706",
   appId:             "1:518504310706:web:2dac5976cb6b8e39e9e6ab"
 });
