--- a/index.html
+++ b/index.html
@@ -577,8 +577,8 @@ body{font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text);min
             <div class="tc-section-title">4. Meta de Ventas y Programación de Fecha</div>
             <ul class="tc-list">
               <li><b>Objetivo de Venta:</b> El objetivo principal de RifariRD es alcanzar la venta del <b>100% de los boletos</b> para proceder con el sorteo.</li>
-              <li><b>Confirmación de Fecha (Regla del 80%):</b> Una vez alcanzado el <b>80% de los boletos vendidos</b>, la administración procederá a fijar y anunciar la <b>Fecha Definitiva del Sorteo</b>.</li>
-              <li><b>Aviso:</b> Si en la fecha tentativa inicialmente prevista no se ha llegado al mínimo del 80%, la fecha final será pospuesta y anunciada a través de nuestras <b>redes sociales y WhatsApp</b> una vez se cumpla con dicho porcentaje.</li>
+              <li><b>Anuncio de Fecha (Regla del 80%):</b> Una vez alcanzado el <b>80% de los boletos vendidos</b>, la administración procederá a fijar y anunciar públicamente la <b>Fecha Definitiva del Sorteo</b>. El sorteo se celebrará al completarse el 100% de las ventas.</li>
+              <li><b>Aviso:</b> Si no se ha llegado al mínimo del 80% en la fecha tentativa prevista, el anuncio de la fecha oficial será pospuesto y comunicado a través de nuestras <b>redes sociales y WhatsApp</b> una vez se cumpla con dicho porcentaje.</li>
             </ul>
           </div>
 
@@ -607,7 +607,7 @@ body{font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text);min
 
     <label class="check-row">
       <input type="checkbox" id="terminos">
-      <span>Acepto los <b><a href="#" onclick="event.preventDefault();document.getElementById('tcModal').classList.add('open')" style="color:var(--yellow2);text-decoration:underline;">términos y condiciones</a></b>. Los 2 ganadores se eligen usando el <b>Pega 4 Real</b> al alcanzar el 80% de ventas.</span>
+      <span>Acepto los <b><a href="#" onclick="event.preventDefault();document.getElementById('tcModal').classList.add('open')" style="color:var(--yellow2);text-decoration:underline;">términos y condiciones</a></b> de participación de RifariRD 2026.</span>
     </label>
 
     <button class="btn-main" id="btnReg" onclick="registrar()">
