--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ body{font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text);min
 .social-title{font-family:'Fredoka One',cursive;font-size:18px;color:var(--text);margin-bottom:16px;}
 .social-links{display:flex;justify-content:center;gap:14px;flex-wrap:wrap;}
 .social-btn{display:inline-flex;align-items:center;gap:10px;padding:12px 22px;border-radius:50px;text-decoration:none;font-weight:700;font-size:14px;transition:all .2s;}
+.social-btn.whatsapp{background:linear-gradient(135deg,#25D366,#128C7E);color:#fff;box-shadow:0 6px 20px rgba(37,211,102,.35);}
+.social-btn.whatsapp:hover{transform:translateY(-3px);}
 .social-btn.instagram{background:linear-gradient(135deg,#f09433,#e6683c,#dc2743,#cc2366,#bc1888);color:#fff;box-shadow:0 6px 20px rgba(220,39,67,.35);}
 .social-btn.instagram:hover{transform:translateY(-3px);}
 .social-btn.instagram2{background:linear-gradient(135deg,#833ab4,#fd1d1d,#fcb045);color:#fff;box-shadow:0 6px 20px rgba(131,58,180,.35);}
@@ -439,6 +441,21 @@ body{font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text);min
     </p>
   </div>
 
+  <!-- CONTACTO -->
+  <div class="social-section">
+    <div class="social-title">📞 Contáctanos</div>
+    <div class="social-links">
+      <a class="social-btn whatsapp"
+         href="https://wa.me/18296753486"
+         target="_blank" rel="noopener">
+        <span>💬</span> WhatsApp · 829-675-3486
+      </a>
+    </div>
+    <p style="margin-top:12px;font-size:12px;color:var(--muted);">
+      ¿Tienes dudas? Escríbenos por WhatsApp y te respondemos 🙌
+    </p>
+  </div>
+
   <!-- BANCOS -->
   <div class="section-hd">💳 Cómo pagar</div>
   <div class="banks">
@@ -634,6 +651,7 @@ body{font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text);min
     <p>
       ⚖️ Los <b>2 ganadores</b> serán elegidos cuando se venda el <b>100%</b> de los boletos.<br>
       Cada boleto tiene un <b>código QR único</b> de verificación.<br>
+      📱 Contacto: <b><a href="https://wa.me/18296753486" style="color:var(--yellow2);text-decoration:none;">829-675-3486</a></b> · WhatsApp<br>
       🇩🇴 © 2026 <b>RifariRD</b> · República Dominicana
     </p>
   </div>
